k8s/ittools/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ittools-service
  namespace: ittools
spec:
  selector:
    app: ittools
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
