k8s/ittools/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ittools-ingress
  namespace: ittools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: ittools.alexmihai.rocks
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ittools-service
                port:
                  number: 80
  # tls: resolved externally by Nginx Proxy Manager
